Add missing shim